# print_oscar_backend

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  TODO.md  alembic.ini  check_admin.py  check_rules.py  create_admin.py  debug_shipping.py  ensure_admin.py  migrate.py  migrate_sync.py  populate_test_rules.py  pyproject.toml  requirements.txt  research_categories.py  research_existing_customizations.py  research_patterns.py  search_product.py  test_login.py  verify_145.py  verify_intelligent_resolver.py  verify_resolver.py  verify_universal.py
alembic/: env.py
alembic/versions/: 040f40ab6f1e_added_settings_table.py  0ec6b38eac92_add_validation_rules.py  1cf2b875deb5_initial.py  54e1b9c2a0c0_add_category_customization_rules.py
app/: main.py
app/core/: config.py  dependencies.py  exceptions.py  payment_config.py  rate_limit.py  security.py
app/db/: session.py
app/models/: __init__.py  audit.py  base.py  catalog.py  checkout.py  media.py  operations.py  payment.py  settings.py  user.py
app/repositories/: admin.py  base.py  catalog.py  checkout.py  (+2 more)
docs/: QUICKSTART.md  api_cheat_sheet.md  architecture.md  endpoint-map.md  frontend_integration.md  payment_system.md
migrations/: 001_extend_schema.sql  002_full_feature_extensions.sql  003_dynamic_customization.sql
scripts/: check_current_settings.py  check_orders.py  check_shipping.py  cleanup_fake_logo.py  dump_settings.py  fix_logo_key.py  make_superadmin.py  seed_category_rules.py  seed_shipping.py  seed_test_data.py  settings_output.txt  setup.ps1  setup_payment_system.py  update_logo.py
(+43 files in other folders)
